add: cringe migrator
