# docs/swagger.json
@@ -63,6 +63,11 @@
         },
         "/auth/signup": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Создание нового админ пользователя",
                 "consumes": [
                     "application/json"
